# k-ai

./: .env  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  TODO.txt  VISION.md  pyproject.toml
.agents/: AGENTS.md
install/: .gitignore.runtime  README.md  install.yaml
scripts/: install.sh  purge.sh
src/k_ai/: __init__.py  agent.py  auth.py  commands.py  config.py  doctor.py  exceptions.py  llm_core.py  main.py  memory.py  models.py  runtime_git.py  secrets.py  session.py  session_store.py  tool_capabilities.py  ui.py  ui_theme.py  utils.py
src/k_ai/defaults/: default_config.yaml
src/k_ai/hooks/: __init__.py  manager.py  models.py  parser.py  registry.py  runner.py
src/k_ai/interaction/: __init__.py  cwd.py  models.py  parser.py  runners.py
src/k_ai/mcp/: __init__.py  client.py  installers.py  manager.py  models.py
src/k_ai/skills/: __init__.py  manager.py  models.py  parser.py  registry.py  selector.py
src/k_ai/tools/: __init__.py  base.py  external.py  mcp.py  mcp_admin.py  memory_tools.py  meta.py  qmd.py  skills.py
src/k_ai/ui/: __init__.py  input.py  markdown.py  math.py  presenter.py  render.py  textual_chat.py
test/: conftest.py  test_auth.py  test_commands.py  test_config.py  test_doctor.py  test_exceptions.py  test_hooks.py  test_interaction.py  test_llm_core.py  test_main.py  test_mcp.py  test_memory.py  test_models.py  test_runtime_git.py  test_scripts_install_purge.py  test_session.py  test_session_store.py  test_skills.py  test_tools.py  test_ui_render.py  test_ui_textual.py  test_utils.py
(+8 files in other folders)
