[project]
name = "k-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ivann KAMDEM", email = "kapoivha@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
k-ai = "k_ai:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "k_ai"
