[project]
name = "kpihx-ai"
version = "0.2.0"
description = "A next-generation, highly configurable, and user-friendly Command Line Interface for interacting with Large Language Models."
readme = "README.md"
authors = [
    { name = "Ivann KAMDEM", email = "kapoivha@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich",
    "typer",
    "litellm",
    "google-auth",
    "mcp",
    "pydantic",
    "pyyaml",
    "prompt-toolkit",
    "httpx",
    "python-dotenv",
    "langgraph>=1.1.3",
]

[project.scripts]
k-ai = "k_ai.main:app"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "k_ai"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
